# enroute

./: Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
benches/: router.rs
enroute/: all.html  fn.matcher.html  fn.routes.html  index.html  sidebar-items.js  struct.And.html  struct.Builder.html  struct.Captures.html  struct.Or.html  struct.Router.html  trait.Handler.html  trait.Matcher.html
implementors/core/default/: trait.Default.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/enroute/: trait.Matcher.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs
src/enroute/: lib.rs.html
