[package]
name = "enroute"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
regex = "1.3"

[dev-dependencies]
async-trait = "0.1"
futures = "0.3"
tokio = { version = "0.2", features = ["rt-threaded","macros"] }